samples/certs/venafi-istio-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # add an annotation indicating the issuer to use.
    kubernetes.io/ingress.class: istio
    cert-manager.io/cluster-issuer: venafi-prd-cloud-issuer
  name: ven-store-istio2-front1-ingress
  namespace: default
spec:
  tls:
  - hosts:
    - ven-store-istio2.venafisandbox.com
    secretName: ven-store-istio2.venafisandbox.com
  rules:
  - host: ven-store-istio2.venafisandbox.com
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
